--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dotenv": "^9.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,8 +18,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "webpack serve --env development",
+    "build": "webpack --env production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
