--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -4,7 +4,7 @@ on:
       - develop
 
 env:
-  AZURE_WEBAPP_NAME: blukey-sandbox # set this to your application's name
+  AZURE_WEBAPP_NAME: blukey-dev # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: './dist'  # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
 
