--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^9.0.1",
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
