--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,12 @@ steps:
 - script: |
     npm run build
   displayName: 'build prod'
+  
+- task: CopyFiles@2
+  inputs:
+    Contents: '**'
+    TargetFolder: '$(build.ArtifactStagingDirectory)'
+    OverWrite: true
 
 - task: PublishBuildArtifacts@1
   inputs:
