--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -28,7 +28,7 @@ jobs:
           npm run build --if-present
       - name: add process.json
         run: |
-          echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> ./dist/process.json
+          echo '{ script: "serve --no-daemon --spa", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> ./dist/process.json
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
