--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: blukey-sandbox # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './dist'  # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: 'dist'  # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
 
 jobs:
@@ -28,7 +28,7 @@ jobs:
           npm run build --if-present
       - name: add process.json
         run: |
-          echo '{ script: "serve --no-daemon --spa", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> ./dist/process.json
+          echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> dist/process.json
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
