--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -26,12 +26,12 @@ jobs:
           # deploy to Azure Web App.
           npm install
           npm run build --if-present
-      - name: add process.json
-        run: |
-          echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> dist/process.json
+    
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          startup-command: 'pm2 serve --spa'
+
