--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -29,7 +29,7 @@ jobs:
           
       - name: add process.json
         run: |
-          echo '{ "script": "serve", "env": { "PM2_SERVE_SPA": "true", "PM2_SERVE_HOMEPAGE": "/index.html" } }' >> dist/process.json
+          echo '{ "script": "serve", "env": { "PM2_SERVE_SPA": true, "PM2_SERVE_HOMEPAGE": "/index.html" } }' >> dist/process.json
     
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
