--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
+    "source-map-loader": "^3.0.0",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
